toevoegingen uitleg veiligheid

--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Beton & Staal constructies opdracht 2023-2024\n",
     "\n",
-    "Deze pagina geeft een beeld van deel 1 van de opdracht van het vak Beton- en Staalconstructies (CTB2220-14) zoals deze is gepubliceerd aan studenten in het jaar 2023-2024 in het tweede kwartaal. Het doel is om als extra voorbeeld te dienen, waardoor de student meer inzicht krijgt in het gedeelte van het vak dat over veiligheid gaat. In de opdracht zijn verschillende parameters afhankelijk gemaakt van de laatste 3 cijfers van het studentennummer. In de betreffende parameters zijn deze aangeduid met **X, Y en Z (1234XYZ)**. Omdat deze opdracht als voorbeeld dient, is in deze uitwerking gekozen voor de parametrisatie **X = 1, Y = 1 en Z = 1**.\n",
+    "Deze pagina geeft een beeld van deel 1 van de opdracht van het vak Beton- en Staalconstructies (CTB2220-14) zoals deze is gepubliceerd aan studenten in het jaar 2023-2024 in het tweede kwartaal. Het doel is om als extra voorbeeld te dienen, waardoor de student meer inzicht krijgt in het gedeelte van het vak dat over veiligheid gaat. In de opdracht zijn verschillende parameters afhankelijk gemaakt van de laatste 3 cijfers van het studentennummer. In de betreffende parameters zijn deze aangeduid met **X, Y en Z (1234XYZ)**. Omdat deze opdracht als voorbeeld dient, is in deze uitwerking gekozen voor de parametrisatie **X = 0, Y = 0 en Z = 0**.\n",
     "\n",
     "## Inleiding\n",
     "\n",
@@ -19,7 +19,19 @@
     "3D-model met dimensies en benamingen \n",
     "``` \n",
     "\n",
-    "Het was een complexe taak om ervoor te zorgen dat de nieuwe staalconstructie naadloos zou integreren met de bestaande betonnen constructie. Met zorgvuldige berekeningen en grondig onderzoek begon het nieuwe ontwerp vorm te krijgen. De afbeelding ({ref}`figuur1`) toont een 3D-model en de afbeeldingen  {ref}`figuur2` en {ref}`figuur3` laten de mechanische ontwerptekeningen van de constructie zien. Meer ontwerptekeningen zijn in bijlage A terug te vinden. Zoals eerder vermeld, bestaat de begane grondvloer van de eengezinswoning uit beton, terwijl de extra structuur voor de eerste- en tweede verdieping van staal is gemaakt. De begane grondvloer heeft een hoogte van 4 meter, de eerste verdieping heeft een hoogte van 3 meter en de tweede verdieping heeft een hoogte van 2,8 meter, zoals weergegeven in afbeelding {ref}`figuur3`. De hartop-hart afstand tussen de kolommen in de lengterichting bedraagt 5 meter, terwijl de overspanning in de dwarsrichting afhankelijk is van je studentennummer (X), zoals aangegeven in tabel 1. \n",
+    "Het was een complexe taak om ervoor te zorgen dat de nieuwe staalconstructie naadloos zou integreren met de bestaande betonnen constructie. Met zorgvuldige berekeningen en grondig onderzoek begon het nieuwe ontwerp vorm te krijgen. {numref}`figuur1` toont een 3D-model en  {numref}`figuur2` en {numref}`figuur3` laten de mechanische ontwerptekeningen van de constructie zien. Meer ontwerptekeningen zijn in {ref}`content:BijlageA:labels` terug te vinden. Zoals eerder vermeld, bestaat de begane grondvloer van de eengezinswoning uit beton, terwijl de extra structuur voor de eerste- en tweede verdieping van staal is gemaakt. De begane grondvloer heeft een hoogte van **4 meter**, de eerste verdieping heeft een hoogte van **3 meter** en de tweede verdieping heeft een hoogte van **2,8 meter**, zoals weergegeven in {numref}`figuur3`. De hartop-hart afstand tussen de kolommen in de lengterichting bedraagt **5 meter**, terwijl de overspanning in de dwarsrichting afhankelijk is van je studentennummer (X), zoals aangegeven in {numref}`overspanning_X`. In het geval van de uitwerking geldt dus **X = 0, dus de overspanning is 3,5 m**.\n",
+    "\n",
+    "```{table} Parametrisatie overspanning\n",
+    ":name: overspanning_X\n",
+    "\n",
+    "| Studentnummer X | Overspanning [m] |\n",
+    "|---|---|\n",
+    "| 0 en 1 | 3,5 |\n",
+    "| 2 en 3 | 4,0 |\n",
+    "| 4 en 5 | 4,5 |\n",
+    "| 6 en 7 | 5 |\n",
+    "| 8 en 9 | 5,5 |\n",
+    "```\n",
     "\n",
     "```{figure} Images/figuur2_mechanica_schema_dwarsrichting.png\n",
     "---\n",
@@ -33,7 +45,41 @@
     "name: figuur3\n",
     "---\n",
     "Mechanica schema lengterichting\n",
-    "``` \n",
+    "```\n",
+    "\n",
+    "De betonnen liggers op assen A, B en C zijn doorlopende liggers. De stalen dak liggers op assen 1,2,3 en 4 zijn ook doorlopende liggers.  De gordingen hebben een overspanning van 5 meter (ze zijn scharnierend verbonden aan de doorlopende stalen dak ligger) en de onderlinge afstand tussen de gordingen is afhankelijk van jouw studienummer. De stalen en betonnen profielen die in de constructie zijn gebruikt, zijn ook gebaseerd op je studentennummer en kan je terugvinden bij vraag 2 en 3 respectievelijk. Aan de achterkant van de woning zijn 3 stalen **tapse liggers** ontworpen om het balkon te ondersteunen (zie {numref}`figuur1`). Deze uitkragende liggers hebben een lengte van 4 meter. Bij vraag 2 vind je de profielafmetingen van het begin en het einde van deze tapse liggers (Het begin- en eindprofielen van de tapse ligger zijn aangeduid in {numref}`figuur3`).  \n",
+    "\n",
+    "**Kanaalplaatvloeren** worden zowel voor de begane grondvloer als voor de verdiepingsvloer gebruikt. Deze vloeren dragen de belasting af in één specifieke richting, zoals aangegeven in de tekening van {numref}`figuurA2` in {ref}`content:BijlageA:labels`. Het dak over de gehele oppervlakte van het gebouw is voorzien van stalen dakplaten (zie {numref}`figuurA3` in {ref}`content:BijlageA:labels`). Ook de dakplaten dragen de belasting af in één richting\n",
+    "\n",
+    "## Vraag 1: Veiligheid en Belastingen\n",
+    "\n",
+    "De constructie wordt gedimensioneerd op basis van de fundamentele belastingcombinaties met permanente-, en veranderlijke belastingen.\n",
+    "\n",
+    "### Permanente belastingen\n",
+    "De permanente belasting kan zowel het eigengewicht van de hoofdconstructie als de vloer- en dak elementen zijn. Het eigengewicht van de stalen dakelementen en kanaalplaatvloer zijn te vinden in {numref}`vloer_dakplaat`.\n",
+    "\n",
+    "```{table} Vloer- en dakplaten gegevens\n",
+    ":name: vloer_dakplaat\n",
+    "| Onderdeel | Symbool | Belasting $kN/m^2$ |\n",
+    "|---|---|---|\n",
+    "| Stalen dakplaat | $ g_{k,eigengewicht,dakplaat} | 0.12 | \n",
+    "| Kanaalplaatvloer | $ g_{k,eigengewicht,kanaal} | 3.02 |\n",
+    "```\n",
+    "\n",
+    "De afmeting van de stalen Gording, Stalen ligger, Stalen kolom, Betonnen ligger en betonnen kolom is in {numref}`profielen_afmetingen` te vinden:\n",
+    "\n",
+    "```{table} Profielen afmetingen\n",
+    ":name: profielen_afmetingen\n",
+    "| X        | Overspanning dak [m] | Overspanning vloer [m] | Gording | Beton ligger [m²] | Beton kolom [m]  |\n",
+    "|----------|----------------------|------------------------|---------|-------------------|------------------|\n",
+    "| 0 en 1   | 1.75                 | 3.5                    | IPE140  | 0.2 x 0.35        | 0.15 x 0.15      |\n",
+    "| 2 en 3   | 2                    | 4                      | IPE160  | 0.22 x 0.35       | 0.175 x 0.175    |\n",
+    "| 4 en 5   | 2.25                 | 4.5                    | IPE180  | 0.24 x 0.37       | 0.2 x 0.2        |\n",
+    "| 6 en 7   | 2.5                  | 5                      | IPE180  | 0.24 x 0.38       | 0.225 x 0.225    |\n",
+    "| 8 en 9   | 2.75                 | 5.5                    | IPE180  | 0.25 x 0.4        | 0.25 x 0.25      |\n",
+    "```\n",
+    "\n",
+    "Naast het eigengewicht van de constructieve onderdelen is er ook een permanente belasting toegepast van $\\mathbf{g_{k,permanent,dak} = 0.45 kN/m^2}$ op het stalen dak. Deze belasting is de permanente belasting die komt uit het plafond, isolatie materiaal, dakbedekking, en zonnepanelen. Ter illustratie dient {numref}`figuur4`.\n",
     "\n",
     "```{figure} Images/figuur4_stalen_dak_principe.png\n",
     "---\n",
@@ -42,12 +88,20 @@
     "Stalen dak principe\n",
     "``` \n",
     "\n",
+    "Binnen wordt er een permanente vloerbelasting toegepast van $\\mathbf{g_{k,permanent,vloer} = 0.25 kN/m^2}$. Deze belasting is de permanente belasting uit het plafond, afwerking van de vloer en kabels en leidingen. Ter illustratie dient {numref}`figuur5`.\n",
+    "\n",
     "```{figure} Images/figuur5_kanaalplaatvloer.png\n",
     "---\n",
     "name: figuur5\n",
     "---\n",
     "Kanaalplaatvloer\n",
-    "``` \n",
+    "```\n",
+    "\n",
+    "De belasting ten gevolge van het eigengewicht van de gevelelementen worden voor deze opdracht gezien als verwaarloosbaar.\n",
+    "\n",
+    "### Veranderlijke belastingen\n",
+    "\n",
+    "Voor de veranderlijke belastingen (belastingen die kunnen 'veranderen' gedurende de levensduur van de constructie) op het dak, wordt onderscheid gemaakt in opgelegde dakbelasting (onderhoud aan het dak), sneeuwbelasting en windbelasting. In het geval van de binnenruimtes wordt er rekening gehouden met de een belasting voor “verplaatsbare” wanden en normale binnen belasting. Deze belasting is ook te vinden in het $\\textcolor{red}{\\text{veiligheid dictaat in paragraaf 2.4.1}}$. \n",
     "\n",
     "```{figure} Images/figuur6_dakbelasting.png\n",
     "---\n",
@@ -68,6 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(content:BijlageA:labels)=\n",
     "## Bijlage A - Ontwerptekeningen\n",
     "\n",
     "```{figure} Images/figuurA1_3dmodel_met_kanaalplaatvloeren_en_stalendakplaten.png\n",
