Toevoegen vragen veiligheid

--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -62,8 +62,8 @@
     ":name: vloer_dakplaat\n",
     "| Onderdeel | Symbool | Belasting $kN/m^2$ |\n",
     "|---|---|---|\n",
-    "| Stalen dakplaat | $ g_{k,eigengewicht,dakplaat} | 0.12 | \n",
-    "| Kanaalplaatvloer | $ g_{k,eigengewicht,kanaal} | 3.02 |\n",
+    "| Stalen dakplaat | $g_{k,eigengewicht,dakplaat}$ | 0.12 | \n",
+    "| Kanaalplaatvloer | $g_{k,eigengewicht,kanaal}$ | 3.02 |\n",
     "```\n",
     "\n",
     "De afmeting van de stalen Gording, Stalen ligger, Stalen kolom, Betonnen ligger en betonnen kolom is in {numref}`profielen_afmetingen` te vinden:\n",
@@ -103,19 +103,179 @@
     "\n",
     "Voor de veranderlijke belastingen (belastingen die kunnen 'veranderen' gedurende de levensduur van de constructie) op het dak, wordt onderscheid gemaakt in opgelegde dakbelasting (onderhoud aan het dak), sneeuwbelasting en windbelasting. In het geval van de binnenruimtes wordt er rekening gehouden met de een belasting voor “verplaatsbare” wanden en normale binnen belasting. Deze belasting is ook te vinden in het $\\textcolor{red}{\\text{veiligheid dictaat in paragraaf 2.4.1}}$. \n",
     "\n",
+    "#### Opgelegde dakbelasting\n",
+    "Een k opgelegde dak belasting van $\\mathbf{g_{k,opgelegd,dak} = 1.0 kN/m^2}$ grijpt aan over een aaneengesloten rechthoekige oppervlakte van maximaal $\\mathbf{10 \\ m^2}$. Dit oppervlak kan zich op een willekeurige plaats van het dakvlak bevinden, zie {numref}`figuur6`. \n",
+    "\n",
     "```{figure} Images/figuur6_dakbelasting.png\n",
     "---\n",
     "name: figuur6\n",
     "---\n",
     "Dakbelasting\n",
-    "``` \n",
+    "```\n",
+    "\n",
+    "#### Sneeuwbelasting\n",
+    "Met de sneeuwbelasting wordt er gerekend met $\\mathbf{g_{k,sneeuw} = 0.56 kN/m^2}$. In verband met het hoogteverschil op as 3 zou er normaal gesproken ook gerekend moeten worden met een extra belasting voor ophoping van sneeuw. Dit is voor deze opdracht buiten beschouwing gelaten. \n",
+    "\n",
+    "#### Windbelasting\n",
+    "In deze opdracht wordt de windbelasting (behalve de opwaartse wind van de uitkragende ligger) buiten beschouwing gelaten. Normaal heeft de wind een belangrijke invloed op de dimensionering op elementen zoals dakbalken en stabiliteitselementen.  De karakteristieke windbelasting is weergegeven in {numref}`figuur7`. $\\mathbf{g_{k,wind,opwaards,balkon} = 0.82 kN/m^2}$.\n",
     "\n",
     "```{figure} Images/figuur7_windbelasting.png\n",
     "---\n",
     "name: figuur7\n",
     "---\n",
     "Windbelasting\n",
-    "``` "
+    "```\n",
+    "\n",
+    "#### Binnenruimtes + verplaatsbare wanden en balkon belasting\n",
+    "Veranderlijke belasting in een binnenruimte staat voor belasting door personen, meubilair, etc. Er wordt een onderscheid gemaakt tussen de belasting binnen en op het terras.\n",
+    "\n",
+    "De karakteristiek waarde van de belasting op vloeren is gelijk aan $g_{k} = 1.75 kN/m^2$. Echter omdat de ruimte groot is en de eigenaren van het huis de mogelijkheid willen om de ruimtes zelf te kunnen indelen en later verbouwen is er gekozen om niet dragende wanden toe te passen. Deze wanden kunnen op iedere locatie van de vloer aanwezig zijn. Dit heten verplaatsbare scheidingswanden. Er wordt gerekend met de lichtste scheidingswand, deze mag in rekening worden gebracht als een gelijkmatig verdeelde belasting van 0.5kN/m2. Dit brengt de totale (binnen)vloer belasting op  $\\mathbf{g_{k,opgelegd,vloer} = 2.25 kN/m^2}$.\n",
+    "\n",
+    "De belasting op het balkon is volgens de Eurocode gelijk aan $\\mathbf{g_{k,opgelegd,balkon} = 2.5 kN/m^2}$.\n",
+    "\n",
+    "### Classificatie\n",
+    "\n",
+    ":::{card}\n",
+    "$\\mathbf{\\text{Vraag a}}$  \n",
+    "Voorafgaande aan het opstellen van de belastingcombinaties dient de gevolgklasse te zijn bepaald. Dit hangt af van de gebruiksfunctie van de constructie. In welke gevolgklasse moet deze constructie worden ingedeeld?\n",
+    "\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "CC1\n",
+    "`````\n",
+    "\n",
+    "$\\mathbf{\\text{Vraag b}}$  \n",
+    "Is er een verandering in gevolgklasse als de eigenaar ervoor gekozen had om 4 bouwlagen toe te passen? (tip: kijk in de NEN-EN 1990:2019/NB:2019 nl, dit is niet te vinden in de reader)\n",
+    "\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "CC2\n",
+    "`````\n",
+    "\n",
+    "$\\mathbf{\\text{Vraag c}}$  \n",
+    "Welke belasting factoren moeten er gehanteerd worden voor (on)gunstig werkende permanente en veranderlijke belastingen?\n",
+    "\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "- Permanent gunstig: 0.9\n",
+    "- Permanent ongunstig: 1.1 of 1.2\n",
+    "- Variabel gunstig: 0\n",
+    "- Variabel ongunstig: 1.35\n",
+    "- BGT permanent: 1\n",
+    "- BGT variablel: 1\n",
+    "`````\n",
+    ":::\n",
+    "\n",
+    "### Belastingen\n",
+    "\n",
+    ":::{card}\n",
+    "$\\mathbf{\\text{Vraag d}}$  \n",
+    "Bepaal de karakteristieke permanente belastingen in [kN/m] die werkzaam zijn op de constructiedelen. Voor staalprofielen kan je gebruik maken van de app Staalprofielen van Bouwen met Staal of de website: https://www.bouwenmetstaal.nl/tools/staalprofielen.\n",
+    "\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "$\\mathbf{\\text{Vraag e}}$  \n",
+    "Bepaal de karakteristieke veranderlijke belastingen in [kN/m] die werkzaam zijn op de constructiedelen.\n",
+    "\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    ":::\n",
+    "\n",
+    "### Combinaties\n",
+    "\n",
+    ":::{card}\n",
+    "$\\mathbf{\\text{Vraag f}}$  \n",
+    "Voor het maatgevende negatieve moment in de uitkragende ligger op as B is de volgende belasting combinatie opgesteld: $\\textit{ongunstig werkend eigengewicht}$, $\\textit{opwaartse wind}$, $\\textit{sneeuw belasting}$ en $\\textit{terras belasting met ψ-factor}$. Dit is echter niet de juiste combinatie. Leg uit waarom dit niet juist is en geef de juiste combinatie (hier is geen berekening voor nodig).\n",
+    "\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "$\\mathbf{\\text{Vraag g}}$  \n",
+    "Geef voor de stalen gording op as B de maximale oplegreacties:\n",
+    "\n",
+    "(i) Doe dit voor de Permanente belasting, Sneeuw belasting en de opgelgede Dakbelasting \n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "(ii) Wat is de $\\textbf{maatgevende veranderlijke belasting}$? \n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "$\\mathbf{\\text{Vraag h}}$  \n",
+    "Geef voor de betonnen ligger op as B de maatgevende belasting combinatie voor het maximale veld- en steunpunt moment:\n",
+    "\n",
+    "(i) Teken de verschillende belasting combinaties in de constructie schema’s\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "(ii) Zoek met behulp van de tabellen van de Quick Reference de maatgevende belasting combinatie voor het veld moment en steunpunt moment.\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "(iii) Bereken de maximale momenten.\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "(iv) Teken de momentenlijn voor het maximale veld moment en de momentenlijn voor het maximale steunpunt moment.\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "$\\mathbf{\\text{Vraag i}}$  \n",
+    "Geef voor de betonnen kolom op de kruising van as B en as 2 de maatgevende belasting combinatie voor de maximale drukkracht. Gebruik {numref}`gegevens_i`. Daarnaast zijn de volgende lasten van belang:\n",
+    "- $\\textbf{EG Beton Kolom [kN/m]}$: Bepaald in opdracht c\n",
+    "- $\\textbf{Permanente Vloerbelasting [kN]}$: Gebruik Quick Reference om reactie kracht te bepaling van ligger opdracht h\n",
+    "- $\\textbf{Veranderlijke Vloerbelasting [kN]}$: Gebruik Quick Reference om reactie kracht te bepaling van ligger opdracht h\n",
+    "\n",
+    "```{table} Gegevens vraag i\n",
+    ":name: gegevens_i\n",
+    "| X  | EG Stalen Kolom [kN/m] | Permanente Dakbelasting [kN] | Veranderlijke Dakbelasting [kN] |\n",
+    "|--------|------|-------|-------|\n",
+    "| 0 en 1 | 0.60 | 13.79 | 20.78 |\n",
+    "| 2 en 3 | 0.74 | 16.01 | 23.75 |                      \n",
+    "| 4 en 5 | 0.91 | 18.29 | 23.75 |\n",
+    "| 6 en 7 | 1.07 | 20.08 | 23.75 |\n",
+    "| 8 en 9 | 1.27 | 22.31 | 23.75 |\n",
+    "```\n",
+    "\n",
+    "In het geval van de uitwerking geldt **X = 0, dus EG Stalen Kolom = 0.60 [kN/m], Permanente Dakbelasting = 13.79 [kN] en Veranderlijke Dakbelasting = 20.78 [kN]**.\n",
+    "\n",
+    "(i) Teken belasting op het constructie schema\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "(i) Bereken de $\\textbf{maatgevende drukkracht}$ \n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    "\n",
+    "(i) Teken de N-lijn\n",
+    "`````{admonition} Uitwerking\n",
+    ":class: tip, dropdown\n",
+    "$\\textcolor{red}{Uitwerking}$\n",
+    "`````\n",
+    ":::"
    ]
   },
   {
