--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -133,6 +133,10 @@
     "\n",
     "De belasting op het balkon is volgens de Eurocode gelijk aan $\\mathbf{g_{k,opgelegd,balkon} = 2.5 kN/m^2}$.\n",
     "\n",
+    "```{Note}\n",
+    "In alle berekeningen wordt gebruikgemaakt van $\\mathbf{g = 10.0 \\ m/s^2}$!\n",
+    "```\n",
+    "\n",
     "### Classificatie\n",
     "\n",
     ":::{card}\n",
@@ -154,6 +158,12 @@
     "\n",
     "$\\mathbf{\\text{Vraag c}}$  \n",
     "Welke belasting factoren moeten er gehanteerd worden voor (on)gunstig werkende permanente en veranderlijke belastingen?\n",
+    "- Permanent gunstig\n",
+    "- Permanent ongunstig\n",
+    "- Variabel gunstig\n",
+    "- Variabel ongunstig\n",
+    "- BGT permanent\n",
+    "- BGT variablel\n",
     "\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
@@ -170,15 +180,43 @@
     "\n",
     ":::{card}\n",
     "$\\mathbf{\\text{Vraag d}}$  \n",
-    "Bepaal de karakteristieke permanente belastingen in [kN/m] die werkzaam zijn op de constructiedelen. Voor staalprofielen kan je gebruik maken van de app Staalprofielen van Bouwen met Staal of de website: https://www.bouwenmetstaal.nl/tools/staalprofielen.\n",
+    "Bepaal de onderstaande karakteristieke permanente belastingen in [kN/m] die werkzaam zijn op de constructiedelen. Voor staalprofielen kan je gebruik maken van de app Staalprofielen van Bouwen met Staal of de website: https://www.bouwenmetstaal.nl/tools/staalprofielen.\n",
+    "- $G_{gording,as,B}$\n",
+    "- $G_{uitkraging,as,B}$, ookwel tapse ligger, gebruik voor deze vraag het beginprofiel\n",
+    "- $G_{stalenkolom,as,B2}$\n",
+    "- $G_{dakligger,as,2}$\n",
+    "- $G_{betonligger,as,B}$\n",
+    "- $G_{betonkolom,as,B2}$\n",
+    "- $G_{dak,as,B}$\n",
+    "- $G_{vloer,as,B}$\n",
+    "\n",
+    "```{table} Profielafmetingen vraag d\n",
+    ":name: profiel_d\n",
+    "| Studentnummer X | Tapse ligger beginprofiel | Stalen ligger | Stalen kolom |\n",
+    "|---------------|--------------|---|---|\n",
+    "| 0 of 1 | IPE400 | IPE120 | HEA120 |\n",
+    "| 2 of 3 | IPE450 | IPE140 | HEA140 |\n",
+    "| 4 of 5 | IPE450 | IPE160 | HEA160 |\n",
+    "| 6 of 7 | IPE500 | IPE180 | HEA180 |\n",
+    "| 8 of 9 | IPE500 | IPE200 | HEA200 |\n",
+    "```\n",
     "\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "- Uit {numref}`profielen_afmetingen` volgt dat de gording voor **X=0** bestaat uit IPE140, dit staalprofiel geeft $G = 12.9 \\ kg/m$. Hieruit volgt: $G_{gording,as,B} = \\frac{G}{100} = \\frac{12.9}{100} = 0.129 \\ kN/m$\n",
+    "- Uit {numref}`profiel_d` volgt dat de tapse uitkraging voor **X=0** bestaat uit IPE400, dit staalprofiel geeft $G = 66.3 \\ kg/m$. Hieruit volgt: $G_{uitkraging,as,B} = \\frac{G}{100} = \\frac{66.3}{100} = 0.663 \\ kN/m$\n",
+    "- Uit {numref}`profiel_d` volgt dat de stalen kolom voor **X=0** bestaat uit IPE120, dit staalprofiel geeft $G = 10.4 \\ kg/m$. Hieruit volgt: $G_{stalenkolom,as,B2} = \\frac{G}{100} = \\frac{10.4}{100} = 0.104 \\ kN/m$\n",
+    "- Uit {numref}`profiel_d` volgt dat de gording voor **X=0** bestaat uit HEA120, dit staalprofiel geeft $G = 19.9 \\ kg/m$. Hieruit volgt: $G_{dakligger,as,2} = \\frac{G}{100} = \\frac{19.9}{100} = 0.199 \\ kN/m$\n",
+    "- Uit {numref}`profielen_afmetingen` volgt dat de betonnen ligger voor **X=0** de afmeting heeft van $0.2 \\ m \\ x \\ 0.35 \\ m$, de dichtheid van gewapen beton is $25 \\ kN/m^3$. Hieruit volgt: $G_{betonligger,as,B} = b * h * \\rho_{beton} = 0.2 * 0.35 * 25 = 1.75 \\ kN/m$\n",
+    "- Uit {numref}`profielen_afmetingen` volgt dat de betonnen kolom voor **X=0** de afmeting heeft van $0.15 \\ m \\ x \\ 0.15 \\ m$, de dichtheid van gewapen beton is $25 \\ kN/m^3$. Hieruit volgt: $G_{betonkolom,as,B2} = b * h * \\rho_{beton} = 0.15 * 0.15 * 25 = 0.5625 \\ kN/m$\n",
+    "- Uit {numref}`profielen_afmetingen` volgt voor **X=0** de overspanning van het dak. $G_{dak,as,B} = (G_{dakplaten} + G_{perm,dakbelasting})*h.o.h._{overpspanning,dak}$  \n",
+    "$= (0.12 + 0.45) * 1.75 = 0.9975 \\ kN/m$\n",
+    "- Uit {numref}`profielen_afmetingen` volgt voor **X=0** de overspanning van de vloer. $G_{vloer,as,B} = (G_{kanaalplaatvloer} + G_{perm,vloerbelasting})*h.o.h._{overpspanning,vloer}$  \n",
+    "$= (3.02 + 0.25) * 3.5 = 11.655 \\ kN/m$\n",
     "`````\n",
     "\n",
     "$\\mathbf{\\text{Vraag e}}$  \n",
-    "Bepaal de karakteristieke veranderlijke belastingen in [kN/m] die werkzaam zijn op de constructiedelen.\n",
+    "Bepaal de onderstaande karakteristieke veranderlijke belastingen in [kN/m] die werkzaam zijn op de constructiedelen.\n",
     "\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
