--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -180,7 +180,7 @@
     "\n",
     ":::{card}\n",
     "$\\mathbf{\\text{Vraag d}}$  \n",
-    "Bepaal de onderstaande karakteristieke permanente belastingen in [kN/m] die werkzaam zijn op de constructiedelen. Voor staalprofielen kan je gebruik maken van de app Staalprofielen van Bouwen met Staal of de website: https://www.bouwenmetstaal.nl/tools/staalprofielen.\n",
+    "Bepaal de onderstaande karakteristieke permanente belastingen in [kN/m] die werkzaam zijn op de constructiedelen. Voor staalprofielen kan je gebruik maken van de app Staalprofielen van Bouwen met Staal of de website: https://www.bouwenmetstaal.nl/tools/staalprofielen. Kijk verder voor de h.o.h. overspanningen van de daken goed naar {ref}`content:BijlageA:labels`.\n",
     "- $G_{gording,as,B}$\n",
     "- $G_{uitkraging,as,B}$, ookwel tapse ligger, gebruik voor deze vraag het beginprofiel\n",
     "- $G_{stalenkolom,as,B2}$\n",
@@ -217,10 +217,20 @@
     "\n",
     "$\\mathbf{\\text{Vraag e}}$  \n",
     "Bepaal de onderstaande karakteristieke veranderlijke belastingen in [kN/m] die werkzaam zijn op de constructiedelen.\n",
+    "- $Q_{sneeuw,gording,as,B}$\n",
+    "- $Q_{dakbelasting,gording,as,B}$\n",
+    "- $Q_{terras,uitkraging,as,b}$\n",
+    "- $Q_{opwaartse,wind,as,B}$\n",
+    "- $Q_{binnen,as,B}$\n",
     "\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "Alle waardes volgen uit de bovenstaande tekst, net als de overspanningen in {numref}`profielen_afmetingen`, gevisualiseerd in {ref}`content:BijlageA:labels`.\n",
+    "- $Q_{sneeuw,gording,as,B} = q_{sneeuw}*h.o.h._{overpspanning,dak} = 0.56 * 1.75 = 0.98 \\ kN/m$\n",
+    "- $Q_{dakbelasting,gording,as,B} = q_{dak}*h.o.h._{overpspanning,dak} = 1 * 1.75 = 1.75 \\ kN/m$\n",
+    "- $Q_{terras,uitkraging,as,b} = q_{terras}*h.o.h._{overpspanning,vloer} = 2.5 * 3.5 = 8.75 \\ kN/m$\n",
+    "- $Q_{opwaartse,wind,as,B} = q_{wind}*h.o.h._{overpspanning,vloer} = 0.82 * 3.5 = 2.856 \\ kN/m$\n",
+    "- $Q_{binnen,as,B} = q_{binnen}*h.o.h._{overpspanning,vloer} = 2.25 * 3.5 = 7.875 \\ kN/m$\n",
     "`````\n",
     ":::\n",
     "\n",
