--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -242,7 +242,11 @@
     "\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "Het maatgevende $\\textbf{negatieve moment}$ in de uitkraging is als alle $\\textbf{belastingen naar beneden}$ gericht zijn.\n",
+    "- Wind van onder (opwaarts), geeft dus een kleiner negatief moment, dus onjuist\n",
+    "- Sneeuwbelasting ($0.56 \\ kN/m^2$) heeft $\\psi_0 = 0$, terrasbelasting ($2.5 \\ kN/m^2$) heeft $\\psi_0 = 0.4$, deze kunnen niet tegelijkertijd aanwezig zijn zonder $\\psi$-factor. De sneeuwbelasting is het kleinste dus deze valt weg.\n",
+    "\n",
+    "De goede combinatie volgens CC1 is dan: $\\mathbf{1.1*q_eigengewicht + 1.35*q_{terras}}$\n",
     "`````\n",
     "\n",
     "$\\mathbf{\\text{Vraag g}}$  \n",
