--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -255,13 +255,18 @@
     "(i) Doe dit voor de Permanente belasting, Sneeuw belasting en de opgelgede Dakbelasting \n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "De stalen gording kan worden geschematiseerd als een ligger op 2 steunpunten. Naar beide steunpunten gaat de helft van de belasting. Dit maakt de bereningen eenvoudig:\n",
+    "- $R_{max,perm} = 0.5 * q_{perm} * L =$  \n",
+    "$= 0.5 * (G_{gording,as,B} + g_{dakplaat}*h.o.h._{overpspanning,dak} + g_{k,perm,dak}*h.o.h._{overpspanning,dak}) * L$  \n",
+    "$= 0.5 * (0.129 + 0.12*1.75 + 0.45*1.75) * 5 = 2.81625 \\ kN$\n",
+    "- $R_{max,sneeuw} = 0.5 * Q_{sneeuw} * L = 0.5 * 0.98 * 5 = 2.45 \\ kN$\n",
+    "- $R_{max,dak,opgelegd} = 0.5 * Q_{dakbelasting,gording,as,B} * L = 0.5 * 1.75 * 5 = 4.375 \\ kN$\n",
     "`````\n",
     "\n",
     "(ii) Wat is de $\\textbf{maatgevende veranderlijke belasting}$? \n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "De maatgevende veranderlijke belasting is $\\mathbf{R_{max,dak,opgelegd}}$\n",
     "`````\n",
     "\n",
     "$\\mathbf{\\text{Vraag h}}$  \n",
