Toevoegen interne verwijzingen

--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -165,6 +165,8 @@
     "- BGT permanent\n",
     "- BGT variablel\n",
     "\n",
+    "Hierbij kan gebruik worden gemaakt van {doc}`../../design_workflow/general_loads/loads_limit_states`.\n",
+    "\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
     "- Permanent gunstig: 0.9\n",
@@ -270,9 +272,9 @@
     "`````\n",
     "\n",
     "$\\mathbf{\\text{Vraag h}}$  \n",
-    "Geef voor de betonnen ligger op as B de maatgevende belasting combinatie voor het maximale veld- en steunpunt moment:\n",
+    "Geef voor de betonnen ligger op as B de maatgevende belasting combinatie voor het maximale veld- en steunpunt moment. Maak hierbij gebruik van {doc}`../../design_workflow/general_mechanics/beams_with_multiple_supports`\n",
     "\n",
-    "(i) Teken de verschillende belasting combinaties in de constructie schema’s\n",
+    "(i) Teken de 5 verschillende belasting combinaties in de constructie schema’s. Het constructieschema bestaat uit een doorgaande ligger op 4 steunpunten.\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
     "$\\textcolor{red}{Uitwerking}$\n",
