--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -274,10 +274,25 @@
     "$\\mathbf{\\text{Vraag h}}$  \n",
     "Geef voor de betonnen ligger op as B de maatgevende belasting combinatie voor het maximale veld- en steunpunt moment. Maak hierbij gebruik van {doc}`../../design_workflow/general_mechanics/beams_with_multiple_supports`\n",
     "\n",
-    "(i) Teken de 5 verschillende belasting combinaties in de constructie schema’s. Het constructieschema bestaat uit een doorgaande ligger op 4 steunpunten.\n",
+    "(i) Teken de 5 verschillende belasting combinaties die horen bij de maatgevende ultimate limit state volgens {doc}`../../design_workflow/general_loads/loads_limit_states` in de constructie schema’s. Het constructieschema bestaat uit een doorgaande ligger op 4 steunpunten.\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "Uit {doc}`../../design_workflow/general_loads/loads_limit_states` in combinatie met de belastingen in deze opdracht volgt dat Design Situation 2 maatgevend is. Gezien het gaat om CC1, geldt $K_{Fl} = 0.9$. Daarmee wordt de maatgevende belastingcombinatie:  \n",
+    "$\\mathbf{1.1*q_{per} + 1.35*q_{ver}}$\n",
+    "\n",
+    "Daarbij is het belangrijk om op te merken dat het eigen gewicht permanent is en dus vast en het veranderlijke gewicht niet, je kunt er dus bij die laatste voor kiezen om die wel of niet te plaatsen. Dit levert dus na uitsluiting door symmetrie de volgende 5 mogelijkheden op in {numref}`5combinaties`.\n",
+    "```{figure} Images/5_belastingcombinaties.png\n",
+    "---\n",
+    "name: 5combinaties\n",
+    "---\n",
+    "5 verschillende belastingcombinaties\n",
+    "```\n",
+    "De verschillende combinaties komen overeen met de situaties j (voor het eigen gewicht) + een keuze uit j t/m n in design_workflow/general_mechanics/beams_with_multiple_supports`. Controleer maar dat:\n",
+    "- j = 2 (maar dus ook 1, gezien het eigengewicht gegarandeerd aanwezig is)\n",
+    "- k = 6\n",
+    "- l = 5\n",
+    "- m = 4\n",
+    "- n = 3\n",
     "`````\n",
     "\n",
     "(ii) Zoek met behulp van de tabellen van de Quick Reference de maatgevende belasting combinatie voor het veld moment en steunpunt moment.\n",
