--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -295,10 +295,57 @@
     "- n = 3\n",
     "`````\n",
     "\n",
-    "(ii) Zoek met behulp van de tabellen van de Quick Reference de maatgevende belasting combinatie voor het veld moment en steunpunt moment.\n",
+    "(ii) Zoek met behulp van de tabellen van {doc}`../../design_workflow/general_mechanics/beams_with_multiple_supports`\n",
+    " de maatgevende belasting combinatie voor het veld moment en steunpunt moment.\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "Wanneer je uit {doc}`../../design_workflow/general_mechanics/beams_with_multiple_supports` de rijen en kolommen verwijdert die niet nodig zijn voor de momenten in deze opdracht levert dat {numref}`veld_steun_momenten` op. Voor de momenten moeten de waardes in {numref}`veld_steun_momenten` vermenigvuldigt worden met $q*L^2$. Voor **X = 0** geldt $L = 5 \\ m$.\n",
+    "\n",
+    "```{table} Veld- en steunpuntsmomenten factoren\n",
+    ":name: veld_steun_momenten\n",
+    "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) |\n",
+    "|------|---------------------------|--------|----------------------------|--------|------|\n",
+    "| j    | 0.0800                    | 0.4000 | -0.1000                    | 0.0250 | 0.5000|\n",
+    "| k    | 0.1013                    | 0.4500 | -0.0500                    | -0.0500|       |\n",
+    "| l    | -0.025                    |        | -0.0500                    | 0.0750 | 0.5000|\n",
+    "| m    | 0.0735                    | 0.3833 | -0.1167                    | 0.0535 | 0.5830|\n",
+    "| n    | 0.0939                    | 0.4333 | -0.0667                    | -0.0250|       |\n",
+    "```\n",
+    "\n",
+    "Voor de permanente belasting (type j), die bestaat uit het eigengewicht van de betonnnen ligger en de vloer geldt: $q = G_{betonligger,as,B} + G_{vloer,as,B} = 1.75 + 11.655 = 13.405 \\ kN/m$. Combinatie van de eerdere factor uit {numref}`veld_steun_momenten`, $L = 5 \\ m$ en q levert {numref}`momenten_permanent`.\n",
+    "\n",
+    "```{table} Veld- en steunpuntsmomenten permanente belasting\n",
+    ":name: momenten_permanent\n",
+    "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) |\n",
+    "|------|---------------------------|--------|----------------------------|--------|------|\n",
+    "| j    | 0.0800                    | 0.4000 | -0.1000                    | 0.0250 | 0.5000|\n",
+    "```\n",
+    "\n",
+    "Voor de variable belasting (types j t/m n), die bestaat uit het eigengewicht van de betonnnen ligger en de vloer geldt: $q = Q_{binnen,as,B} = 7.875 \\ kN/m$. Combinatie van de eerdere factor uit {numref}`veld_steun_momenten`, $L = 5 \\ m$ en q levert {numref}`momenten_veranderlijk`.\n",
+    "\n",
+    "```{table} Veld- en steunpuntsmomenten variabele belasting\n",
+    ":name: momenten_veranderlijk\n",
+    "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) |\n",
+    "|------|---------------------------|--------|----------------------------|--------|------|\n",
+    "| j    | 0.0800                    | 0.4000 | -0.1000                    | 0.0250 | 0.5000|\n",
+    "| k    | 0.1013                    | 0.4500 | -0.0500                    | -0.0500|       |\n",
+    "| l    | -0.025                    |        | -0.0500                    | 0.0750 | 0.5000|\n",
+    "| m    | 0.0735                    | 0.3833 | -0.1167                    | 0.0535 | 0.5830|\n",
+    "| n    | 0.0939                    | 0.4333 | -0.0667                    | -0.0250|       |\n",
+    "```\n",
+    "\n",
+    "Sommatie van de permanente belasting type j met de verscheide types voor de veranderlijke belasting levert de momenten in {numref}`sommatie`. In deze sommatie slaat het type belastingcombinatie terug op de veranderlijke belasting, gezien de permanente belasting altijd j is.\n",
+    "\n",
+    "```{table} Veld- en steunpuntsmomenten\n",
+    ":name: sommatie\n",
+    "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) |\n",
+    "|------|---------------------------|--------|----------------------------|--------|------|\n",
+    "| j    | 0.0800                    | 0.4000 | -0.1000                    | 0.0250 | 0.5000|\n",
+    "| k    | 0.1013                    | 0.4500 | -0.0500                    | -0.0500|       |\n",
+    "| l    | -0.025                    |        | -0.0500                    | 0.0750 | 0.5000|\n",
+    "| m    | 0.0735                    | 0.3833 | -0.1167                    | 0.0535 | 0.5830|\n",
+    "| n    | 0.0939                    | 0.4333 | -0.0667                    | -0.0250|       |\n",
+    "```\n",
     "`````\n",
     "\n",
     "(iii) Bereken de maximale momenten.\n",
